KAFKA-21028: [2/2] Remove hamcrest from org.apache.kafka.streams.processor.internals package