@@ -150,18 +150,11 @@ import static org.apache.kafka.streams.processor.internals.ClientUtils.adminClie
 import static org.apache.kafka.test.StreamsTestUtils.TaskBuilder.statelessTask;
 import static org.apache.kafka.test.TestUtils.DEFAULT_MAX_WAIT_MS;
 import static org.apache.kafka.test.TestUtils.waitForCondition;
-import static org.hamcrest.CoreMatchers.equalTo;
-import static org.hamcrest.CoreMatchers.not;
-import static org.hamcrest.CoreMatchers.startsWith;
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.empty;
-import static org.hamcrest.Matchers.is;
-import static org.hamcrest.Matchers.isA;
-import static org.hamcrest.core.IsInstanceOf.instanceOf;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertInstanceOf;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertNull;
 import static org.junit.jupiter.api.Assertions.assertSame;
@@ -897,7 +890,7 @@ public class StreamThreadTest {
         // Validate that the scheduled rebalance wasn't reset then set to MAX_VALUE so we
         // don't trigger one before we can shut down, since the rebalance must be ended
         // for the thread to fully shut down
-        assertThat(mockClientSupplier.nextRebalanceMs().get(), not(0L));
+        assertNotEquals(0L, mockClientSupplier.nextRebalanceMs().get());
 
         thread.taskManager().handleRebalanceComplete();
 
@@ -980,43 +973,43 @@ public class StreamThreadTest {
         addRecord(mockConsumer, ++offset, 0L);
         runOnce(false);
 
-        assertThat(thread.currentNumIterations(), equalTo(1));
+        assertEquals(1, thread.currentNumIterations());
 
         // processed one more record without punctuation, and bump num.iterations to 2
         addRecord(mockConsumer, ++offset, 1L);
         runOnce(false);
 
-        assertThat(thread.currentNumIterations(), equalTo(2));
+        assertEquals(2, thread.currentNumIterations());
 
         // processed zero records, early exit and iterations stays as 2
         runOnce(false);
-        assertThat(thread.currentNumIterations(), equalTo(2));
+        assertEquals(2, thread.currentNumIterations());
 
         // system time based punctuation without processing any record, iteration stays as 2
         mockTime.sleep(11L);
 
         runOnce(false);
-        assertThat(thread.currentNumIterations(), equalTo(2));
+        assertEquals(2, thread.currentNumIterations());
 
         // system time based punctuation after processing a record, half iteration to 1
         mockTime.sleep(11L);
         addRecord(mockConsumer, ++offset, 5L);
 
         runOnce(false);
-        assertThat(thread.currentNumIterations(), equalTo(1));
+        assertEquals(1, thread.currentNumIterations());
 
         // processed two records, bumping up iterations to 3 (1 + 2)
         addRecord(mockConsumer, ++offset, 5L);
         addRecord(mockConsumer, ++offset, 6L);
         runOnce(false);
 
-        assertThat(thread.currentNumIterations(), equalTo(3));
+        assertEquals(3, thread.currentNumIterations());
 
         // stream time based punctuation halves to 1
         addRecord(mockConsumer, ++offset, 11L);
         runOnce(false);
 
-        assertThat(thread.currentNumIterations(), equalTo(1));
+        assertEquals(1, thread.currentNumIterations());
 
         // processed three records, bumping up iterations to 3 (1 + 2)
         addRecord(mockConsumer, ++offset, 12L);
@@ -1024,14 +1017,14 @@ public class StreamThreadTest {
         addRecord(mockConsumer, ++offset, 14L);
         runOnce(false);
 
-        assertThat(thread.currentNumIterations(), equalTo(3));
+        assertEquals(3, thread.currentNumIterations());
 
         mockProcessors.forEach(MockApiProcessor::requestCommit);
         addRecord(mockConsumer, ++offset, 15L);
         runOnce(false);
 
         // user requested commit should half iteration to 1
-        assertThat(thread.currentNumIterations(), equalTo(1));
+        assertEquals(1, thread.currentNumIterations());
 
         // processed three records, bumping up iterations to 3 (1 + 2)
         addRecord(mockConsumer, ++offset, 15L);
@@ -1039,20 +1032,20 @@ public class StreamThreadTest {
         addRecord(mockConsumer, ++offset, 17L);
         runOnce(false);
 
-        assertThat(thread.currentNumIterations(), equalTo(3));
+        assertEquals(3, thread.currentNumIterations());
 
         // time based commit without processing, should keep the iteration as 3
         mockTime.sleep(90L);
         runOnce(false);
 
-        assertThat(thread.currentNumIterations(), equalTo(3));
+        assertEquals(3, thread.currentNumIterations());
 
         // time based commit without processing, should half the iteration to 1
         mockTime.sleep(90L);
         addRecord(mockConsumer, ++offset, 18L);
         runOnce(false);
 
-        assertThat(thread.currentNumIterations(), equalTo(1));
+        assertEquals(1, thread.currentNumIterations());
     }
 
     @ParameterizedTest
@@ -1423,28 +1416,26 @@ public class StreamThreadTest {
 
         runOnce(processingThreadsEnabled);
 
-        assertThat(
+        assertEquals(
+            10.0,
             streamsMetrics.metrics().get(
                 new MetricName(
                     "commit-latency-max",
                     "stream-thread-metrics",
                     "",
-                    Collections.singletonMap("thread-id", CLIENT_ID)
+                    Map.of("thread-id", CLIENT_ID)
                 )
-            ).metricValue(),
-            equalTo(10.0)
-        );
-        assertThat(
+            ).metricValue());
+        assertEquals(
+            10.0,
             streamsMetrics.metrics().get(
                 new MetricName(
                     "commit-latency-avg",
                     "stream-thread-metrics",
                     "",
-                    Collections.singletonMap("thread-id", CLIENT_ID)
+                    Map.of("thread-id", CLIENT_ID)
                 )
-            ).metricValue(),
-            equalTo(10.0)
-        );
+            ).metricValue());
     }
 
     @ParameterizedTest
@@ -1520,7 +1511,7 @@ public class StreamThreadTest {
 
         runOnce(processingThreadsEnabled);
 
-        assertThat(clientSupplier.producers.size(), is(1));
+        assertEquals(1, clientSupplier.producers.size());
         assertSame(clientSupplier.consumer, thread.mainConsumer());
         assertSame(clientSupplier.restoreConsumer, thread.restoreConsumer());
     }
@@ -1664,7 +1655,7 @@ public class StreamThreadTest {
 
         final StreamsException thrown = assertThrows(StreamsException.class, thread::run);
 
-        assertThat(thrown.getCause(), isA(IllegalStateException.class));
+        assertInstanceOf(IllegalStateException.class, thrown.getCause());
         // The Mock consumer shall throw as the assignment has been wiped out, but records are assigned.
         assertEquals("Cannot add records for a partition that is not assigned to the consumer", thrown.getCause().getMessage());
         assertFalse(consumer.shouldRebalance());
@@ -1856,7 +1847,7 @@ public class StreamThreadTest {
         thread.rebalanceListener().onPartitionsAssigned(assignedPartitions);
 
         runOnce(processingThreadsEnabled);
-        assertThat(thread.readOnlyActiveTasks().size(), equalTo(1));
+        assertEquals(1, thread.readOnlyActiveTasks().size());
         final MockProducer<byte[], byte[]> producer = clientSupplier.producers.get(0);
 
         // change consumer subscription from "pattern" to "manual" to be able to call .addRecords()
@@ -1870,7 +1861,7 @@ public class StreamThreadTest {
         } else {
             mockTime.sleep(config.getLong(StreamsConfig.COMMIT_INTERVAL_MS_CONFIG) + 1L);
             runOnce(processingThreadsEnabled);
-            assertThat(producer.history().size(), equalTo(1));
+            assertEquals(1, producer.history().size());
         }
 
         mockTime.sleep(config.getLong(StreamsConfig.COMMIT_INTERVAL_MS_CONFIG) + 1L);
@@ -1893,7 +1884,7 @@ public class StreamThreadTest {
         assertTrue(thread.readOnlyActiveTasks().stream().anyMatch(task -> task.id().equals(task1)),
             "StreamsThread removed the fenced zombie task already, should wait for rebalance to close all zombies together.");
 
-        assertThat(producer.commitCount(), equalTo(1L));
+        assertEquals(1L, producer.commitCount());
     }
 
     private void testThrowingDuringCommitTransactionException(final RuntimeException e, final boolean processingThreadsEnabled) throws InterruptedException {
@@ -1923,7 +1914,7 @@ public class StreamThreadTest {
 
         runOnce(processingThreadsEnabled);
 
-        assertThat(thread.readOnlyActiveTasks().size(), equalTo(1));
+        assertEquals(1, thread.readOnlyActiveTasks().size());
 
         // need to process a record to enable committing
         addRecord(mockConsumer, 0L);
@@ -2017,7 +2008,7 @@ public class StreamThreadTest {
 
         // the first iteration completes the restoration
         runOnce(processingThreadsEnabled);
-        assertThat(thread.readOnlyActiveTasks().size(), equalTo(1));
+        assertEquals(1, thread.readOnlyActiveTasks().size());
 
         // the second transits to running and unpause the input
         runOnce(processingThreadsEnabled);
@@ -2055,13 +2046,13 @@ public class StreamThreadTest {
         // process the record
         addRecord(mockConsumer, 0L);
         shouldThrow.set(false);
-        assertThat(processed.get(), is(false));
+        assertFalse(processed.get());
         if (processingThreadsEnabled) {
             assertTrue(runUntilTimeoutOrCondition(() -> runOnce(processingThreadsEnabled), processed::get));
         } else {
             runOnce(processingThreadsEnabled);
             runOnce(processingThreadsEnabled);
-            assertThat(processed.get(), is(true));
+            assertTrue(processed.get());
         }
     }
 
@@ -2095,7 +2086,7 @@ public class StreamThreadTest {
         thread.rebalanceListener().onPartitionsAssigned(assignedPartitions);
 
         runOnce(processingThreadsEnabled);
-        assertThat(thread.readOnlyActiveTasks().size(), equalTo(1));
+        assertEquals(1, thread.readOnlyActiveTasks().size());
         final MockProducer<byte[], byte[]> producer = clientSupplier.producers.get(0);
 
         producer.commitTransactionException = e;
@@ -2112,7 +2103,7 @@ public class StreamThreadTest {
         assertTrue(thread.readOnlyActiveTasks().stream().anyMatch(task -> task.id().equals(task1)),
             "StreamsThread removed the fenced zombie task already, should wait for rebalance to close all zombies together.");
 
-        assertThat(producer.commitCount(), equalTo(0L));
+        assertEquals(0L, producer.commitCount());
 
         assertTrue(clientSupplier.producers.get(0).transactionInFlight());
         assertFalse(clientSupplier.producers.get(0).transactionCommitted());
@@ -2161,7 +2152,7 @@ public class StreamThreadTest {
 
         runOnce(processingThreadsEnabled);
 
-        assertThat(thread.readOnlyActiveTasks().size(), equalTo(1));
+        assertEquals(1, thread.readOnlyActiveTasks().size());
 
         // need to process a record to enable committing
         addRecord(mockConsumer, 0L);
@@ -2251,7 +2242,7 @@ public class StreamThreadTest {
         assertTrue(Arrays.asList("RUNNING", "STARTING", "PARTITIONS_REVOKED", "PARTITIONS_ASSIGNED", "CREATED").contains(metadata.threadState()),
             "#threadState() was: " + metadata.threadState() + "; expected either RUNNING, STARTING, PARTITIONS_REVOKED, PARTITIONS_ASSIGNED, or CREATED");
         final String threadName = metadata.threadName();
-        assertThat(threadName, startsWith(CLIENT_ID + "-StreamThread-" + threadIdx));
+        assertTrue(threadName.startsWith(CLIENT_ID + "-StreamThread-" + threadIdx));
         assertEquals(threadName + "-consumer", metadata.consumerClientId());
         assertEquals(threadName + "-restore-consumer", metadata.restoreConsumerClientId());
         assertEquals(Collections.singleton(threadName + "-producer"), metadata.producerClientIds());
@@ -2312,7 +2303,7 @@ public class StreamThreadTest {
         setupInternalTopologyWithoutState(config);
         internalTopologyBuilder.addStateStore(new MockKeyValueStoreBuilder("myStore", true), "processor1");
 
-        assertThat(createStandbyTask(config), not(empty()));
+        assertFalse(createStandbyTask(config).isEmpty());
     }
 
     @ParameterizedTest
@@ -2321,7 +2312,7 @@ public class StreamThreadTest {
         final StreamsConfig config = new StreamsConfig(configProps(false, processingThreadsEnabled));
         setupInternalTopologyWithoutState(config);
 
-        assertThat(createStandbyTask(config), empty());
+        assertTrue(createStandbyTask(config).isEmpty());
     }
 
     @ParameterizedTest
@@ -2334,7 +2325,7 @@ public class StreamThreadTest {
         storeBuilder.withLoggingDisabled();
         internalTopologyBuilder.addStateStore(storeBuilder, "processor1");
 
-        assertThat(createStandbyTask(config), empty());
+        assertTrue(createStandbyTask(config).isEmpty());
     }
 
     @Test
@@ -2861,7 +2852,7 @@ public class StreamThreadTest {
         thread.setStreamsUncaughtExceptionHandler((e, b) -> exceptionHandlerInvoked.set(true));
         thread.run();
 
-        assertThat(exceptionHandlerInvoked.get(), is(true));
+        assertTrue(exceptionHandlerInvoked.get());
 
         verify(consumer).subscribe((Collection<String>) any(), any());
     }
@@ -3311,7 +3302,7 @@ public class StreamThreadTest {
         topologyMetadata.buildAndRewriteTopology();
         thread = buildStreamThread(consumer, taskManager, config, topologyMetadata);
 
-        assertThat(dummyProducerMetrics, is(thread.producerMetrics()));
+        assertEquals(dummyProducerMetrics, thread.producerMetrics());
     }
 
     @ParameterizedTest
@@ -3441,7 +3432,7 @@ public class StreamThreadTest {
         thread.run();
 
         final Metric failedThreads = StreamsTestUtils.getMetricByName(metrics.metrics(), "failed-stream-threads", "stream-metrics");
-        assertThat(failedThreads.metricValue(), is(shouldFail ? 1.0 : 0.0));
+        assertEquals(shouldFail ? 1.0 : 0.0, failedThreads.metricValue());
     }
 
     @ParameterizedTest
@@ -3568,15 +3559,15 @@ public class StreamThreadTest {
 
         final KafkaFuture<Uuid> mainConsumerFuture = clientInstanceIdFutures.get("clientId-StreamThread-1-consumer");
         final Uuid mainConsumerUuid = mainConsumerFuture.get();
-        assertThat(mainConsumerUuid, equalTo(consumerInstanceId));
+        assertEquals(consumerInstanceId, mainConsumerUuid);
 
         final KafkaFuture<Uuid> restoreConsumerFuture = clientInstanceIdFutures.get("clientId-StreamThread-1-restore-consumer");
         final Uuid restoreConsumerUuid = restoreConsumerFuture.get();
-        assertThat(restoreConsumerUuid, equalTo(restoreInstanceId));
+        assertEquals(restoreInstanceId, restoreConsumerUuid);
 
         final KafkaFuture<Uuid> producerFuture = clientInstanceIdFutures.get("clientId-StreamThread-1-producer");
         final Uuid producerUuid = producerFuture.get();
-        assertThat(producerUuid, equalTo(producerInstanceId));
+        assertEquals(producerInstanceId, producerUuid);
     }
 
     @ParameterizedTest
@@ -3592,8 +3583,8 @@ public class StreamThreadTest {
 
         final KafkaFuture<Uuid> future = consumerFutures.get("clientId-StreamThread-1-consumer");
         final ExecutionException error = assertThrows(ExecutionException.class, future::get);
-        assertThat(error.getCause(), instanceOf(UnsupportedOperationException.class));
-        assertThat(error.getCause().getMessage(), equalTo("clientInstanceId not set"));
+        assertInstanceOf(UnsupportedOperationException.class, error.getCause());
+        assertEquals("clientInstanceId not set", error.getCause().getMessage());
     }
 
     @ParameterizedTest
@@ -3609,8 +3600,8 @@ public class StreamThreadTest {
 
         final KafkaFuture<Uuid> future = consumerFutures.get("clientId-StreamThread-1-restore-consumer");
         final ExecutionException error = assertThrows(ExecutionException.class, future::get);
-        assertThat(error.getCause(), instanceOf(UnsupportedOperationException.class));
-        assertThat(error.getCause().getMessage(), equalTo("clientInstanceId not set"));
+        assertInstanceOf(UnsupportedOperationException.class, error.getCause());
+        assertEquals("clientInstanceId not set", error.getCause().getMessage());
     }
 
     @ParameterizedTest
@@ -3626,8 +3617,8 @@ public class StreamThreadTest {
 
         final KafkaFuture<Uuid> future = producerFutures.get("clientId-StreamThread-1-producer");
         final ExecutionException error = assertThrows(ExecutionException.class, future::get);
-        assertThat(error.getCause(), instanceOf(UnsupportedOperationException.class));
-        assertThat(error.getCause().getMessage(), equalTo("clientInstanceId not set"));
+        assertInstanceOf(UnsupportedOperationException.class, error.getCause());
+        assertEquals("clientInstanceId not set", error.getCause().getMessage());
     }
 
     @ParameterizedTest
@@ -3644,7 +3635,7 @@ public class StreamThreadTest {
 
         final KafkaFuture<Uuid> future = consumerFutures.get("clientId-StreamThread-1-consumer");
         final Uuid clientInstanceId = future.get();
-        assertThat(clientInstanceId, equalTo(null));
+        assertNull(clientInstanceId);
     }
 
     @ParameterizedTest
@@ -3662,7 +3653,7 @@ public class StreamThreadTest {
 
         final KafkaFuture<Uuid> future = consumerFutures.get("clientId-StreamThread-1-restore-consumer");
         final Uuid clientInstanceId = future.get();
-        assertThat(clientInstanceId, equalTo(null));
+        assertNull(clientInstanceId);
     }
 
     @ParameterizedTest
@@ -3682,7 +3673,7 @@ public class StreamThreadTest {
 
         final KafkaFuture<Uuid> future = producerFutures.get("clientId-StreamThread-1-producer");
         final Uuid clientInstanceId = future.get();
-        assertThat(clientInstanceId, equalTo(null));
+        assertNull(clientInstanceId);
     }
 
     @ParameterizedTest
@@ -3702,11 +3693,8 @@ public class StreamThreadTest {
 
         final KafkaFuture<Uuid> future = consumerFutures.get("clientId-StreamThread-1-consumer");
         final ExecutionException error = assertThrows(ExecutionException.class, future::get);
-        assertThat(error.getCause(), instanceOf(TimeoutException.class));
-        assertThat(
-            error.getCause().getMessage(),
-            equalTo("Could not retrieve main consumer client instance id.")
-        );
+        assertInstanceOf(TimeoutException.class, error.getCause());
+        assertEquals("Could not retrieve main consumer client instance id.", error.getCause().getMessage());
     }
 
 
@@ -3728,11 +3716,8 @@ public class StreamThreadTest {
         final KafkaFuture<Uuid> future = consumerFutures.get("clientId-StreamThread-1-restore-consumer");
 
         final ExecutionException error = assertThrows(ExecutionException.class, future::get);
-        assertThat(error.getCause(), instanceOf(TimeoutException.class));
-        assertThat(
-            error.getCause().getMessage(),
-            equalTo("Could not retrieve restore consumer client instance id.")
-        );
+        assertInstanceOf(TimeoutException.class, error.getCause());
+        assertEquals("Could not retrieve restore consumer client instance id.", error.getCause().getMessage());
     }
 
     @ParameterizedTest
@@ -3755,11 +3740,8 @@ public class StreamThreadTest {
 
         final KafkaFuture<Uuid> future = producerFutures.get("clientId-StreamThread-1-producer");
         final ExecutionException error = assertThrows(ExecutionException.class, future::get);
-        assertThat(error.getCause(), instanceOf(TimeoutException.class));
-        assertThat(
-            error.getCause().getMessage(),
-            equalTo("Could not retrieve thread producer client instance id.")
-        );
+        assertInstanceOf(TimeoutException.class, error.getCause());
+        assertEquals("Could not retrieve thread producer client instance id.", error.getCause().getMessage());
     }
 
     @Test
@@ -4587,12 +4569,11 @@ public class StreamThreadTest {
         thread = createStreamThread(CLIENT_ID, false);
 
         final List<MetricsReporter> reportersAfterCreate = thread.streamsMetrics().metricsRegistry().reporters();
-        assertThat(
-                reportersAfterCreate.stream()
-                        .filter(r -> r instanceof StreamsThreadMetricsDelegatingReporter)
-                        .count(),
-                equalTo(1L)
-        );
+        assertEquals(
+            1L,
+            reportersAfterCreate.stream()
+                .filter(r -> r instanceof StreamsThreadMetricsDelegatingReporter)
+                .count());
 
         thread.shutdown(CloseOptions.GroupMembershipOperation.LEAVE_GROUP);
         TestUtils.waitForCondition(
@@ -4602,12 +4583,11 @@ public class StreamThreadTest {
         );
 
         final List<MetricsReporter> reportersAfterShutdown = thread.streamsMetrics().metricsRegistry().reporters();
-        assertThat(
-                reportersAfterShutdown.stream()
-                        .filter(r -> r instanceof StreamsThreadMetricsDelegatingReporter)
-                        .count(),
-                equalTo(0L)
-        );
+        assertEquals(
+            0L,
+            reportersAfterShutdown.stream()
+                .filter(r -> r instanceof StreamsThreadMetricsDelegatingReporter)
+                .count());
     }
 
     @Test
